--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
     <header>
         <a href="index.html"><img class="ufabc" src="assets/img/ufabc.png" alt="ufabc logo"></a>
-        <h1>Equipe Lucas-Erikson</h1>
-        <h2>Processamento de Vídeo 2023.2</h2>
+        <h1>Nome do grupo</h1>
+        <h2>Codificação de Sinais Multimidia</h2>
     </header>
 
     <main>
