--- a/index.html
+++ b/index.html
@@ -15,43 +15,37 @@
 <body>
     <header>
         <a href="index.html"><img class="ufabc" src="assets/img/ufabc.png" alt="ufabc logo"></a>
-        <h1>Nome do grupo</h1>
+        <h1>Pixel Rangers</h1>
+        <a href="index.html"><img class="icon" src="assets/img/icon.jpeg" alt="Icone"></a>
         <h2>Codificação de Sinais Multimidia</h2>
     </header>
 
     <main>
         <img class="banner" src="assets/img/camera2.png" alt="camera">
-        <h3>Índice de Relatórios</h3>
+        <h3>Equipe</h3>
         <ul>
-            <li><a href="relatorio1.html">Relatório 1</a></li>
-            <li><a href="relatorio2.html">Relatório 2</a></li>
-            <li><a href="relatorio3.html">Relatório 3</a></li>
-            <li><a href="relatorio4.html">Relatório 4</a></li>
-            <li><a href="relatorio5.html">Relatório 5</a></li>
-            <li><a href="relatorio6.html">Relatório 6</a></li>
-            <li><a href="relatorio7.html">Relatório 7</a></li>
-            <li><a href="relatorio8.html">Relatório 8</a></li>
+            <li><a href="equipes.html#brunok">Bruno Melati Kuvasney</a></li>
+            <li><a href="relatorio4.html#brunon">Bruno Neves Carneiro</a></li>
+            <li><a href="relatorio2.html#gabriel">Gabriel Andrade de Vasconcelos</a></li>
+            <li><a href="relatorio1.html#lucas">Lucas Pereira de Medeiros</a></li>
         </ul>
-        <h3>Índice de Trabalhos</h3>
+        <h3>Laboratórios</h3>
         <ul>
-            <li><a href="trabalhot1.html">Contexto e Cenário de Aplicação (CA)</a></li>
-            <li><a href="trabalhot2.html">Modelagem Funcional do Sistema de Processamento Visual (MFS)</a></li>
-            <li><a href="trabalhot3.html">Desenvolvimento do Sistema de Processamento Visual (SPV)</a></li>
-            <li><a href="trabalhot4.html">Roteiro Experimental de Aplicação (REA) e Questionário Avaliativo (AQA)</a></li>
-            <li><a href="trabalhot5.html">Relatório Final do Trabalho (RFT)</a></li>
-            
-
-        </ul>
-
-        <h3>Páginas Pessoais</h3>
-        <ul>
-            <li><a href="https://drive.google.com/drive/folders/1TXjeP-FqV8I5dgurVUNaovRY1jOsEi04?usp=sharing ">Página pessoal de Lucas</a></li>
+            <li><a href="equipes.html">Aquisição de Imagens</a></li>
+            <li><a href="">Aquisição de Vídeo</a></li>
+            <li><a href="">Codificação de Imagem por DCT</a></li>
+            <li><a href="">Codificação de Imagem por DWT</a></li>
+            <li><a href="">Percepção Auditiva</a></li>
+            <li><a href="">PDS da Voz e Áudio</a></li>
+            <li><a href="">Codificação de Voz</a></li>
+            <li><a href="">Codificação de Áudio</a></li>
+            <li><a href="">MIDI e Resposta Impulsiva</a></li>
         </ul>
     </main>
 
     <footer>
-        <p>Página do grupo composto por Lucas Medeiros e Erikson Jose para a disciplina de processamento de video 2023.2</p>
-        <p>Professor: Celso S Kurashima</p>
+        <p>Página confeccionada para a disciplina de Codificação de Sinais Multimidia 2024.3</p>
+        <p>Professor: Mário Minami</p>
     </footer>
 </body>
 
