--- a/equipes.html
+++ b/equipes.html
@@ -12,7 +12,10 @@
     <title>Equipe</title>
 </head>
 <body>
-    <header></header>
+    <header>
+      <a href="index.html"><img class="ufabc" src="assets/img/ufabc.png" alt="ufabc logo"></a>
+        <h1>Pixel Rangers</h1>
+    </header>
     <main>
       <h3 id="brunok">Bruno Melati Kuvasney</h3>
       <h3 id="brunon">Bruno Neves Carneiro</h3>  
