--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
 <body>
     <header>
         <a href="index.html"><img class="ufabc" src="assets/img/ufabc.png" alt="ufabc logo"></a>
-        <h2>Codificação de Sinais Multimidia</h2>
-        <a href="index.html"><img class="icon" src="assets/img/icon.jpeg" alt="Icone"></a>
+        <h1>Codificação de Sinais Multimidia</h1>
+        <a href="index.html"><img class="banner" src="assets/img/icon.jpeg" alt="banner"></a>
     </header>
 
     <main>
-        <img class="banner" src="assets/img/camera2.png" alt="camera">
         <h3>Equipe</h3>
         <ul>
             <li><a href="equipes.html#brunok">Bruno Melati Kuvasney</a></li>
             <li><a href="relatorio4.html#brunon">Bruno Neves Carneiro</a></li>
             <li><a href="relatorio2.html#gabriel">Gabriel Andrade de Vasconcelos</a></li>
-            <li><a href="relatorio1.html#lucas">Lucas Pereira de Medeiros</a></li>
+            <li><a href="lucas.html#lucas">Lucas Pereira de Medeiros</a></li>
         </ul>
         <h3>Laboratórios</h3>
         <ul>
@@ -39,6 +38,16 @@
             <li><a href="">Codificação de Voz</a></li>
             <li><a href="">Codificação de Áudio</a></li>
             <li><a href="">MIDI e Resposta Impulsiva</a></li>
+        </ul>
+        <h3>Seminários</h3>
+        <ul>
+        </ul>
+        <h3>Contatos</h3>
+        <li>-</li>
+        <li>-</li>
+        <li>-</li>
+        <li>lucas.medeiros@aluno.ufabc.edu.br</li>
+        <ul>
         </ul>
     </main>
 
