--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="index.html"><img class="ufabc" src="assets/img/ufabc.png" alt="ufabc logo"></a>
         <h1>Codificação de Sinais Multimidia</h1>
         <a href="index.html"><img class="banner" src="assets/img/icon.jpeg" alt="banner"></a>
+        <p>Alt: Logo do grupo, escrito Pixel Rangers (nome do grupo)</p>
     </header>
 
     <main>
