--- a/lucas.html
+++ b/lucas.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="stylesheet" href="assets/css/audio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
@@ -20,14 +19,17 @@
     </header>
 
     <main>
-        <img src="assets/img/avatar_lucas.jpg" alt="avatar do lucas" class="avatar">
+        <img src="assets/img/avatar_lucas.jpg" alt="avatar do lucas" class="perfil">
         <img src="assets/img/foto_lucas.jpg" alt="foto do lucas" class="perfil">
+        <p> Alt: Duas imagens, sendo a primeira do meu avatar, "Ranger Azul", e a segunda minha foto
+        </p>
         <h3>Sobre</h3>
         
         <audio controls>
             <source src="assets/audio/audio_lucas.waptt.opus" type="audio/ogg">
             Seu navegador não suporta o elemento de áudio.
         </audio>
+        <p>Alt: Controlador de áudio com as informações do texto abaixo sobre mim</p>
 
         <p class="resumo">Me chamo Lucas, tenho 23 anos e moro na cidade de São Bernardo do Campo. Trabalho em uma empresa de balanças chamada Toledo do Brasil, na área de tecnologia, e meus 
             hobbies são tocar música, jogos, ver séries e também alguns animes mais antigos, que foi de onde surgiu minha ideia de avatar, Ranger azul (minha cor favorita) da série Power Rangers 
@@ -35,13 +37,15 @@
         <p class="legenda">Filme e série que recomendo</p>
         <img src="assets/img/aneis.jpg" alt="foto do lucas" class="perfil">
         <img src="assets/img/supernatural.jpg" alt="foto do lucas" class="perfil">
+        <p>Alt: duas imagens de um filme e uma série que recomendo, sendo a primeira o cartaz do filme "O Senhor dos Anéis: A Sociedade do Anel" e o segundo, a série de televisão "Supernatural"</p>
 
         <p class="resumo">Gosto bastante de vôlei, mas ultimamente faço apenas academia e tenho preferência por Rock 
             e algumas músicas Pop, principalmente as de 2010, e gosto de filmes de fantasia e ficção.</p>
             <p class="legenda">Bandas que recomendo</p>
             <img src="assets/img/jam.jpeg" alt="foto do lucas" class="perfil">
             <img src="assets/img/radio.jpeg" alt="foto do lucas" class="perfil">
-            <img src="assets/img/green.jpg" alt="foto do lucas" class="perfil"> 
+            <img src="assets/img/green.jpg" alt="foto do lucas" class="perfil">
+            <p>Alt: Três imagens de bandas que recomendo, sendo a primeira "Pearl Jam" seguido por "Radiohead" e "Green Day"</p>
         
 
         <p class="resumo">
