Página Pessoal: Gabriel Andradade (Correção)

--- a/lab1_gabriel/gabriel.html
+++ b/lab1_gabriel/gabriel.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Pessoal - Gabriel Andrade de Vasconcelos</title>
-    <link rel="stylesheet" href="lab1_gabriel/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 </head>
 <body>
     <div class="banner">
         <div class="banner-img">
-            <img src="lab1_gabriel/img/Avatar.jpg" alt="Avatar">
+            <img src="img/Avatar.jpg" alt="Avatar">
         </div>
         <div class="banner-text">
             <h1>Gabriel Andrade<br>de Vasconcelos</h1>
         </div>
         <div class="banner-img">
-            <img src="lab1_gabriel/img/Gabriel.jfif" alt="Foto">
+            <img src="img/Gabriel.jfif" alt="Foto">
         </div>
     </div>
     <div class="main-content">
         <div class="content-block">
             <div class="block-img">
-                <img src="lab1_gabriel/img/Maua.jpg" alt="Foto da cidade de Mauá">
+                <img src="img/Maua.jpg" alt="Foto da cidade de Mauá">
             </div>
             <div class="block-text">
                 <p>Olá! Meu nome é Gabriel Andrade de Vasconcelos, moro em Mauá - SP e atualmente trabalho na área de Cyber Segurança, providenciando monitoramento e resposta primária à ataques para a TIM Brasil.
                 <p>Sou apaixonado pela cultura geek, aproveitando meu tempo livre com jogos de computador, animes e histórias em quadrinhos, sendo uma ótima forma de relaxar, divertir e me transportar para histórias fantásticas. O avatar escolhido reflete exatamente isso, sendo um personagem da série Power Rangers no estilo de pixel art, a qual eu assistia muito durante minha infância junto de ser um esitlo de arte que aprecio muito por remeter ao primeiros jogos que tive contato.
                 <p>Me mantenho ativo praticando natação e indo para academia, equilibrando o corpo e a mente. Também sou fã de música, especialmente rock, abordando desde bandas clássicas quantas novas para adicionar à minha playlist. Nos filmes, prefiro gêneros como ação, fantasia e ficção científica, tanto pela emoção que proporcionam quanto as incríveis histórias e mundos que possuem.
                 <p>Como planos futuros, tenho foco em mudar minha carreira para a área de desenvolvimento de software, com o objetivo de aprimorar minhas habilidades de escrita de código. Sou muito empolgado com as oportunidades que posso ter e desejo cada vez mais explorar esse campo do mercado.</p>
-                <p><audio src="lab1_gabriel/audio/gravacao.mp3" controls type="audio/mp3"></audio></p>
+                <p><audio src="audio/gravacao.mp3" controls type="audio/mp3"></audio></p>
             </div>
         </div>
     </div>
