--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h3>Equipe</h3>
         <ul>
             <li><a href="equipes.html#brunok">Bruno Melati Kuvasney</a></li>
-            <li><a href="relatorio4.html#brunon">Bruno Neves Carneiro</a></li>
+            <li><a href="brunon.html#brunon">Bruno Neves Carneiro</a></li>
             <li><a href="lab1_gabriel/gabriel.html">Gabriel Andrade de Vasconcelos</a></li>
             <li><a href="lucas.html#lucas">Lucas Pereira de Medeiros</a></li>
         </ul>
