--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <h3>Equipe</h3>
         <ul>
-            <li><a href="equipes.html#brunok">Bruno Melati Kuvasney</a></li>
+            <li><a href="lab1bruno/brunok.html">Bruno Melati Kuvasney</a></li>
             <li><a href="brunon.html#brunon">Bruno Neves Carneiro</a></li>
             <li><a href="lab1_gabriel/gabriel.html">Gabriel Andrade de Vasconcelos</a></li>
             <li><a href="lucas.html#lucas">Lucas Pereira de Medeiros</a></li>
