--- a/lab1bruno/brunok.html
+++ b/lab1bruno/brunok.html
@@ -21,7 +21,7 @@
             <h1>Bruno Melati<br>Kuvasney</h1>
         </div>
         <div class="banner-img">
-            <img src="img/icon.jpeg" alt="Foto">
+            <a href="../index.html"><img src="img/icon.jpeg" alt="Foto"></a>
         </div>
     </div>
     <div class="main-content">
