--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
     </header>
 
     <main>
-        <h3>Equipe</h3>
+        <audio controls class="audio">
+            <source src="assets/audio/inicio.waptt.opus" type="audio/ogg">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+        <p>Alt: Controlador de áudio com as informações da página inicial</p>
+        <h3 id="equipes">Equipe</h3>
         <ul>
             <li><a href="lab1bruno/brunok.html">Bruno Melati Kuvasney</a></li>
             <li><a href="brunon.html#brunon">Bruno Neves Carneiro</a></li>
@@ -30,8 +35,8 @@
         </ul>
         <h3>Laboratórios</h3>
         <ul>
-            <li><a href="equipes.html">Aquisição de Imagens</a></li>
-            <li><a href="">Aquisição de Vídeo</a></li>
+            <li><a href="index.html#equipes">Aquisição de Imagens</a></li>
+            <li><a href="lab2.html">Aquisição de Vídeo</a></li>
             <li><a href="">Codificação de Imagem por DCT</a></li>
             <li><a href="">Codificação de Imagem por DWT</a></li>
             <li><a href="">Percepção Auditiva</a></li>
@@ -42,14 +47,21 @@
         </ul>
         <h3>Seminários</h3>
         <ul>
+            <li>-</li>
+            <li>-</li> 
         </ul>
         <h3>Contatos</h3>
-        <li>-</li>
-        <li>-</li>
-        <li>-</li>
-        <li>lucas.medeiros@aluno.ufabc.edu.br</li>
         <ul>
+            <li>-</li>
+            <li>-</li>
+            <li>-</li>
+            <li>lucas.medeiros@aluno.ufabc.edu.br</li>
         </ul>
+        <h3>Aplicação Multimídia</h3>
+        <ul>
+            <li> - </li>
+        </ul>
+        <h3><a href="reflexoes.html">Reflexões</a></h3>
     </main>
 
     <footer>
