--- a/lucas.html
+++ b/lucas.html
@@ -34,16 +34,16 @@
             hobbies são tocar música, jogos, ver séries e também alguns animes mais antigos, que foi de onde surgiu minha ideia de avatar, Ranger azul (minha cor favorita) da série Power Rangers 
             que eu assistia quando era criança, além de se encaixar com a tematica de equipe. </p>
         <p class="legenda">Filme e série que recomendo</p>
-        <img src="assets/img/aneis.jpg" alt="foto do lucas" class="perfil">
-        <img src="assets/img/supernatural.jpg" alt="foto do lucas" class="perfil">
+        <img src="assets/img/aneis.jpg" alt="foto do senhor dos aneis" class="perfil">
+        <img src="assets/img/supernatural.jpg" alt="foto de supernatural" class="perfil">
         <p>Alt: duas imagens de um filme e uma série que recomendo, sendo a primeira o cartaz do filme "O Senhor dos Anéis: A Sociedade do Anel" e o segundo, a série de televisão "Supernatural"</p>
 
         <p class="resumo">Gosto bastante de vôlei, mas ultimamente faço apenas academia e tenho preferência por Rock 
             e algumas músicas Pop, principalmente as de 2010, e gosto de filmes de fantasia e ficção.</p>
             <p class="legenda">Bandas que recomendo</p>
-            <img src="assets/img/jam.jpeg" alt="foto do lucas" class="perfil">
-            <img src="assets/img/radio.jpeg" alt="foto do lucas" class="perfil">
-            <img src="assets/img/green.jpg" alt="foto do lucas" class="perfil">
+            <img src="assets/img/jam.jpeg" alt="foto de pearl jam" class="perfil">
+            <img src="assets/img/radio.jpeg" alt="foto do radiohead" class="perfil">
+            <img src="assets/img/green.jpg" alt="foto do greenday" class="perfil">
             <p>Alt: Três imagens de bandas que recomendo, sendo a primeira "Pearl Jam" seguido por "Radiohead" e "Green Day"</p>
         
 
