--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <ul>
             <li><a href="index.html#equipes">Aquisição de Imagens</a></li>
             <li><a href="lab2.html">Aquisição de Vídeo</a></li>
-            <li><a href="">Codificação de Imagem por DCT</a></li>
-            <li><a href="">Codificação de Imagem por DWT</a></li>
+            <li><a href="lab3.html">Codificação de Imagem por DCT</a></li>
+            <li><a href="lab4.html">Codificação de Imagem por DWT</a></li>
             <li><a href="">Percepção Auditiva</a></li>
             <li><a href="">PDS da Voz e Áudio</a></li>
             <li><a href="">Codificação de Voz</a></li>
