--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </ul>
         <h3>Seminários</h3>
         <ul>
-            <li>-</li>
+            <li><a href="dct.html">Transformada Discreta de Cosseno (DCT)</a></li>
             <li>-</li> 
         </ul>
         <h3>Contatos</h3>
