--- a/lab3.html
+++ b/lab3.html
@@ -110,13 +110,13 @@
         <h2>Processamento (DCT)</h2>
 
         <h3>Recorte da Bola</h3>
-        <img src="assets/img/fotos lab 3/DCT/bola_DCT.png" alt="foto do Lucas" class="celular">
+        <img src="assets/img/fotos lab 3/DCT/bola_DCT.png" alt="foto do Lucas" class="handcam">
 
         <h3>Recorte pessoal (imagem do Bruno)</h3>
-        <img src="assets/img/fotos lab 3/DCT/brunon_reconstruida.png" alt="foto do lucas" class="celular">
+        <img src="assets/img/fotos lab 3/DCT/brunon_reconstruida.png" alt="foto do lucas" class="handcam">
 
         <h3>Recorte pessoal (imagem do Bruno) com duas diagonais superiores a mais</h3>
-        <img src="assets/img/fotos lab 3/DCT/brunon_reconstruida_duas_diag.png" alt="foto do lucas" class="celular">
+        <img src="assets/img/fotos lab 3/DCT/brunon_reconstruida_duas_diag.png" alt="foto do lucas" class="handcam">
 
         <h3>Comentários e conclusões (questões presentes no documento para download)</h3>
         <p class="resumo">Questão 0: As cores da camisa do Barcelona estão certas?</p>
