--- a/lab4.html
+++ b/lab4.html
@@ -27,7 +27,8 @@
         <p>Alt: Controlador de áudio com as informações da página inicial</p>
         <h3>Objetivos</h3>
         <ul>
-            <li>Utilizar o Google Colab e o OpenCV, para processar as imagens e vídeos com a DCT.</li>
+            <li>Efetuar a Codificação de Imagem e a Decodificação por DWT e IDWT.</li>
+            <li>Testar funções de Codificação Multinível</li>
         </ul>
         <h3>Materiais</h3>
         <ul>
@@ -40,9 +41,21 @@
         </p>
 
         <p class="resumo"></p>
-        <p><a href="assets/download/Lab3_Cod_Imagem_DCT.ipynb" download="Lab3_Cod_Imagem_DCT.ipynb">Clique aqui para baixar o arquivo do código utilizado</a></p>
+        <p><a href="assets/download/Lab4_ImageDWT_v2.ipynb" download="Lab4_ImageDWT_v2.ipynb">Clique aqui para baixar o arquivo do código utilizado</a></p>
         
+        <h3>Fotos originais</h3>
+        <img src="assets/img/fotos lab 2/celular/lucas_cel.jpg" alt="foto do Lucas (celular)" class="celular">
+        <img src="assets/img/fotos lab 2/celular/brunok_cel.jpg" alt="foto do BrunoK (celular)" class="celular">
+        <img src="assets/img/fotos lab 2/celular/brunon_cel.jpg" alt="foto do BrunoN (celular)" class="celular">
+        <img src="assets/img/fotos lab 2/celular/gabriel_cel.jpg" alt="foto do Gabriel (celular)" class="celular">
+        <img src="assets/img/fotos lab 2/celular/grupo_cel.jpg" alt="foto do grupo (celular)" class="handcam">
 
+        <h3>Fotos originais (composições)</h3>
+        <img src="assets/img/fotos lab 2/composição/lucas_avatar.jpg" alt="foto do Lucas (composta)" class="handcam">
+        <img src="assets/img/fotos lab 2/composição/brunok_avatar.jpg" alt="foto do BrunoK (composta)" class="handcam">
+        <img src="assets/img/fotos lab 2/composição/brunon_avatar.jpg" alt="foto do BrunoN (composta)" class="handcam">
+        <img src="assets/img/fotos lab 2/composição/gabriel_avatar.jpg" alt="foto do Gabriel (composta)" class="handcam">
+        <img src="assets/img/fotos lab 2/composição/grupo_avatar.jpg" alt="foto do grupo (composta)" class="handcam">
 
 
     </main>
