--- a/dct.html
+++ b/dct.html
@@ -21,7 +21,7 @@
 
     <main>
         <audio controls class="audio">
-            <source src="assets/audio/lab4.waptt.opus" type="audio/ogg">
+            <source src="assets/audio/dct.waptt.opus" type="audio/ogg">
             Seu navegador não suporta o elemento de áudio.
         </audio>
         <p>Alt: Controlador de áudio com as informações da página inicial</p>
