--- a/lab3.html
+++ b/lab3.html
@@ -103,8 +103,9 @@
         <img src="assets/img/fotos lab 3/Processados/brunon_avatar_JPEG.png" alt="foto do BrunoN" class="handcam">
         <img src="assets/img/fotos lab 3/Processados/gabriel_avatar_JPEG.png" alt="foto do Gabriel" class="handcam">
 
-        <!-- <h3>Tabela comparando os tamanhos originais e os comprimidos</h3>
-        <img src="assets/img/fotos lab 2/edit/lucas_grande_gray1.png" alt="foto do Lucas" class="celular"> -->
+        <h3>Tabela comparando os tamanhos originais e os comprimidos</h3>
+        <img src="assets/img/fotos lab 3/tabela_pct.png" alt="tabela porcentagem" class="celular">
+        <img src="assets/img/fotos lab 3/tabela_pct.png" alt="tabela em bytes" class="celular">
 
         <h3></h3>
         <h2>Processamento (DCT)</h2>
