--- a/lab3.html
+++ b/lab3.html
@@ -104,8 +104,8 @@
         <img src="assets/img/fotos lab 3/Processados/gabriel_avatar_JPEG.png" alt="foto do Gabriel" class="handcam">
 
         <h3>Tabela comparando os tamanhos originais e os comprimidos</h3>
-        <img src="assets/img/fotos lab 3/tabela_pct.png" alt="tabela porcentagem" class="handcam">
-        <img src="assets/img/fotos lab 3/tabela_pct.png" alt="tabela em bytes" class="handcam">
+        <img src="assets/img/fotos lab 3/tabela_pct.png" alt="tabela porcentagem" class="equacao">
+        <img src="assets/img/fotos lab 3/tabela_pct.png" alt="tabela em bytes" class="equacao">
 
         <h3></h3>
         <h2>Processamento (DCT)</h2>
